[GITHUB-1] Add missing Galaxy meta information.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-ce
 
 install:
-  - make deps
+  - make .venv_ansible${ANSIBLE_INSTALL_VERSION}
 
 script:
   - make test
