--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,7 @@ indent_size = 4
 indent_style = space
 insert_final_newline = false
 trim_trailing_whitespace = true
+max_line_length = 119
 
 [*.cf]
 indent_size = 2
